Add Which Pixel Buds section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         <!-- /Spacer -->
                                         <tr>
                                             <td align="center" style="padding: 0; width: 100%; font-size: 0;">
-                                                <img src="img/Hero-Pixel-Pro.png" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 600px; font-size: 0; margin: 0 auto;" width="600">
+                                                <img src="img/Hero-Pixel-Pro.png" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 600px;" width="600">
                                             </td>
                                         </tr>
                                     </td>
@@ -139,8 +139,8 @@
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td class="left-column" align="left" style="padding: 25px 15px 25px 15px; vertical-align: middle; text-align: center;" width="50%">
-                                                    <h3 class="headline h4" style="font-size: 22px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
+                                                <td class="left-column" align="left" style="padding: 30px 20px 30px 20px; vertical-align: middle; text-align: center;" width="50%">
+                                                    <h3 class="headline h4" style="font-size: 21px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
                                                         Tune it out or let it in.
                                                     </h3>
                                                     <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
@@ -188,7 +188,7 @@
                                                 <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5">
                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 12px; overflow: hidden; background-color: #f9e8e3;">
                                                         <tr>
-                                                            <td class="image" align="left" style="padding: 0; margin: 0 auto; width: 100%; font-size: 0;">
+                                                            <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
                                                                 <img src="img/Hands-Free.png" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
                                                                 outline: none; display: block; width: 100%; max-width: 350px;" width="350">
                                                             </td>
@@ -231,7 +231,7 @@
 
                                                  <!-- Start of Right Column -->
                                                  <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5">
-                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
+                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
                                                          <tr>
                                                              <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
                                                                  <img src="img/Made-For-You.png" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
@@ -276,6 +276,56 @@
                         </td>
                     </tr>
                     <!-- ==========>> /End of Main Content<<==========  -->
+                    <!-- ==========>> Start of  Pixel Buds<<==========  -->
+                    <tr>
+                        <td align="center" style="padding: 0;">
+                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 20px; overflow: hidden; background-color: #f1f3f4;">
+                                <tr>
+                                    <td class="content pixel-buds"   align="center" style="padding: 40px 40px 0 40px">
+                                        <h2 class="headline h2" style="color: #3C4043; font-weight: 700; font-size: 26px; line-height: 36px; margin: 0 0 6px 0;">
+                                            Which Pixel Buds are right for you?
+                                        </h2>
+                                        <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 15px 0;">
+                                            Explore Pixel Buds Pro and Pixel Buds A-Series side by side to find the sound you’re looking for.
+                                        </p>
+                                        <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600; margin: 0 0 10px 0;">
+                                            <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                Learn more >
+                                            </span>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="bg-image" align="center" style="padding: 0; width: 100%; font-size: 0;">
+                                        <img src="img/Pixel-Bud-Options.png" alt="Image of Pixel Buds Pro" style="display: block;width: 100%; max-width: 600px;" width="600">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- ==========>> /End of  Pixel Buds<<==========  -->
+                    <!-- ==========>> Spacer <<==========  -->
+                    <tr>
+                        <td align="center" style="padding: 0;">
+                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                 <tr>
+                                     <td class="empty-spacer" style=" padding: 0; height: 22px; font-size: 0; line-height: 0;" height="22">
+                                        &nbsp;
+                                     </td>
+                                 </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- ==========>> /Spacer <<==========  -->
+                    <!-- ==========>> Start of Shop on Google Store <<==========  -->
+                    <tr>
+                        <td align="center" style="padding: 0;">
+                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- ==========>> /End of Shop on Google Store <<==========  -->
                 </table>
                 <!-- /Email Container -->
             </td>
@@ -284,5 +334,9 @@
     <!-- ==========>> /Email End  <<==========  -->
 </body>
 </html>
+
+
+
+
 
 
