--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </style>
 
 </head>
-<body style="width: 100%; table-layout: fixed; background-color: #FFFEFE; margin: 0 auto; padding: 0;">
+<body style="width: 100%; table-layout: fixed; background-color: #FFFEFE; margin: 0 auto; padding: 0; padding-bottom: 60px;">
     <!-- ==========>> Email Start <<==========  -->
     <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
         <tr>
@@ -139,7 +139,7 @@
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td class="left-column" align="left" style="padding: 30px 20px 30px 20px; vertical-align: middle; text-align: center;" width="50%">
+                                                <td class="left-column" align="left" style="padding: 30px 20px 30px 20px; vertical-align: middle; text-align: center;" width="50%" valign="top">
                                                     <h3 class="headline h4" style="font-size: 21px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
                                                         Tune it out or let it in.
                                                     </h3>
@@ -153,7 +153,7 @@
                                                     </a>
                                                 </td>
                                                  <!-- Start of Right Column -->
-                                                <td class="right-column" align="right" style="padding: 0; vertical-align: top" width="50%" >
+                                                <td class="right-column" align="right" style="padding: 0; vertical-align: top" width="50%" valign="top">
                                                     <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
                                                 </td>
                                             </tr>
@@ -185,7 +185,7 @@
                                         <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: center">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5">
+                                                <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5" valign="top">
                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 12px; overflow: hidden; background-color: #f9e8e3;">
                                                         <tr>
                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
@@ -195,7 +195,7 @@
                                                         </tr>
                                                         <!-- Content -->
                                                         <tr>
-                                                            <td style="padding: 24px 15px 28px 15px;">
+                                                            <td style="padding: 24px 15px 28px 15px;" valign="top">
                                                                 <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
                                                                     <tr>
                                                                         <td align="left" style="padding: 0;">
@@ -230,7 +230,7 @@
                                                 <!-- /Spacer -->
 
                                                  <!-- Start of Right Column -->
-                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5">
+                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5" valign="top">
                                                     <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
                                                          <tr>
                                                              <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
@@ -320,8 +320,33 @@
                     <!-- ==========>> Start of Shop on Google Store <<==========  -->
                     <tr>
                         <td align="center" style="padding: 0;">
-                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
-                                
+                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 20px; overflow: hidden; background-color: #f4f4f4;">
+                                <tr>
+                                  <td align="center" valign="top" style="padding: 0;">
+                                    <h4 style="font-size: 20px; line-height: 30px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0; padding: 40px 40px 24px 40px; margin: 0;">
+                                        Get more when you shop on the Google Store. 
+                                    </h4>
+                                  </td>
+                                </tr>
+                                <!-- Options -->
+                                <tr>
+                                    <td align="center" valign="top" style="padding: 0 16px 24px 16px;">
+                                        <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" align="left">
+                                            <tr>
+                                                <td style="padding: 0;" valign="top">
+                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" align="left">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-size: 0; width: 100%;">
+                                                                <img src="img/Google-One.png" alt="Goole One" style="width: 50px; height: 50px; display: block;">
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                  </tr>
+                                  <!-- /Options -->
                             </table>
                         </td>
                     </tr>
