Working on three column section of Shop on Google Store

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                     <!-- ==========>> Start of Main Content  <<==========  -->
                     <tr>
-                        <td align="center" style="padding: 45px 16px 24px 16px;">
+                        <td align="center" style="padding: 45px 16px 20px 16px;">
                             <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                 <tr>
                                     <td align="center" style="padding: 0;">
@@ -224,7 +224,7 @@
                                                 </td>
 
                                                 <!-- Spacer -->
-                                                <td style=" padding: 0; width: 16px; font-size: 0; line-height: 0;" width="15">
+                                                <td style=" padding: 0; width: 16px; font-size: 0; line-height: 0;" width="16">
                                                     &nbsp;
                                                 </td>
                                                 <!-- /Spacer -->
@@ -309,7 +309,7 @@
                         <td align="center" style="padding: 0;">
                             <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
                                  <tr>
-                                     <td class="empty-spacer" style=" padding: 0; height: 22px; font-size: 0; line-height: 0;" height="22">
+                                     <td class="empty-spacer" style=" padding: 0; height: 20px; font-size: 0; line-height: 0;" height="20">
                                         &nbsp;
                                      </td>
                                  </tr>
@@ -320,33 +320,19 @@
                     <!-- ==========>> Start of Shop on Google Store <<==========  -->
                     <tr>
                         <td align="center" style="padding: 0;">
-                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 20px; overflow: hidden; background-color: #f4f4f4;">
+                            <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; background-color: #f4f4f4;">
                                 <tr>
-                                  <td align="center" valign="top" style="padding: 0;">
-                                    <h4 style="font-size: 20px; line-height: 30px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0; padding: 40px 40px 24px 40px; margin: 0;">
+                                  <td align="center" valign="top" style="padding: 40px 40px 24px 40px;">
+                                    <h4 style="font-size: 20px; line-height: 30px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0; margin: 0;">
                                         Get more when you shop on the Google Store. 
                                     </h4>
                                   </td>
                                 </tr>
-                                <!-- Options -->
+                                <!-- Options Row -->
                                 <tr>
-                                    <td align="center" valign="top" style="padding: 0 16px 24px 16px;">
-                                        <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" align="left">
-                                            <tr>
-                                                <td style="padding: 0;" valign="top">
-                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" align="left">
-                                                        <tr>
-                                                            <td align="left" style="padding: 0; font-size: 0; width: 100%;">
-                                                                <img src="img/Google-One.png" alt="Goole One" style="width: 50px; height: 50px; display: block;">
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                  </tr>
-                                  <!-- /Options -->
+                                    
+                                </tr>
+                                <!-- /Options Row -->
                             </table>
                         </td>
                     </tr>
