Update Google Pixel Buds size

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
                                         <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: center">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5" valign="top">
+                                                <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center; width: 276px;" width="276" valign="top">
                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 12px; overflow: hidden; background-color: #f9e8e3;">
                                                         <tr>
-                                                            <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
+                                                            <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
                                                                 <img src="img/Hands-Free.png" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
-                                                                outline: none; display: block; width: 100%; max-width: 350px;" width="350">
+                                                                outline: none; display: block; width: 100%; max-width: 276px; height: auto; font-size: 0;" width="276">
                                                             </td>
                                                         </tr>
                                                         <!-- Content -->
@@ -210,7 +210,7 @@
                                                                     <tr>
                                                                         <td align="center">
                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
-                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                <span style="font-size: 14px; line-height: 10px;">
                                                                                     Learn more >
                                                                                 </span>
                                                                             </a>
@@ -230,17 +230,17 @@
                                                 <!-- /Spacer -->
 
                                                  <!-- Start of Right Column -->
-                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5" valign="top">
+                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center; width: 276px;" width="276" valign="top">
                                                     <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
                                                          <tr>
-                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
+                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
                                                                  <img src="img/Made-For-You.png" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
-                                                                 outline: none; display: block; width: 100%; max-width: 350px; height: auto; font-size: 0;" width="350">
+                                                                 outline: none; display: block; width: 100%; max-width: 276px; height: auto; font-size: 0;" width="276">
                                                              </td>
                                                          </tr>
                                                          <!-- Content -->
                                                          <tr>
-                                                             <td style="padding: 24px 15px 28px 15px;">
+                                                             <td style="padding: 24px 15px 28px 15px;" valign="top">
                                                                 <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
                                                                     <tr>
                                                                         <td align="left" style="padding: 0;">
@@ -255,7 +255,7 @@
                                                                     <tr>
                                                                         <td align="center" style="padding: 0;">
                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
-                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                <span style="font-size: 14px; line-height: 10px;">
                                                                                     Learn more >
                                                                                 </span>
                                                                             </a>
@@ -296,8 +296,19 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td align="center" style="padding: 0;">
+                                        <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                             <tr>
+                                                 <td class="empty-spacer" style=" padding: 0; height: 20px; font-size: 0; line-height: 0;" height="20">
+                                                    &nbsp;
+                                                 </td>
+                                             </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td class="bg-image" align="center" style="padding: 0; width: 100%; font-size: 0;">
-                                        <img src="img/Pixel-Bud-Options.png" alt="Image of Pixel Buds Pro" style="display: block;width: 100%; max-width: 600px;" width="600">
+                                        <img src="img/Pixel-bud-Options-2.png" alt="Image of Pixel Buds Pro" style="display: block;width: 100%; max-width: 400px;" width="400">
                                     </td>
                                 </tr>
                             </table>
