--- a/index.html
+++ b/index.html
@@ -332,18 +332,138 @@
                     <tr>
                         <td align="center" style="padding: 0;">
                             <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; background-color: #f4f4f4;">
+                                <!-- Start of  Title Row-->
                                 <tr>
-                                  <td align="center" valign="top" style="padding: 40px 40px 24px 40px;">
-                                    <h4 style="font-size: 20px; line-height: 30px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0; margin: 0;">
-                                        Get more when you shop on the Google Store. 
-                                    </h4>
-                                  </td>
+                                    <td align="center" style="padding: 0;"> 
+                                        <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                            <tr>
+                                                <td align="center" valign="top" style="padding: 40px 40px 24px 40px;">
+                                                    <h4 style="font-size: 20px; line-height: 30px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0; margin: 0;">
+                                                        Get more when you shop on the Google Store. 
+                                                    </h4>
+                                                 </td>
+                                            </tr>
+                                        </table>
+                                    </td>
                                 </tr>
-                                <!-- Options Row -->
+                                <!-- /End of  Title Row-->
+                                <!-- Start of Options Row -->
                                 <tr>
-                                    
+                                    <td align="center" style="padding: 0;" valign="top"> 
+                                        <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                            <tr>
+                                                <td class="pixel-column" align="center" valign="top" style="padding: 0 16px 16px 16px;">
+                                                    <!-- Start of Column 1 -->
+                                                    <table role="presentation" width="178.6" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" align="left">
+                                                        <tr>
+                                                            <td class="padding" align="left" valign="top" style=" padding: 0 9px 20px 9px;">
+                                                                <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                                                    <tr>
+                                                                        <td align="left" style="padding: 0; font-size: 0; width: 100%; padding-top: 20px; padding-bottom: 20px;">
+                                                                            <img src="img/Google-One.png" alt="Goole One" style="width: 40px; height: 40px; display: block;">
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td style="padding: 0;">
+                                                                            <h4 style="font-size: 15px; line-height: 24px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0;">
+                                                                                Google One
+                                                                            </h4>
+                                                                            <p class="sub-head" style="font-size: 12px; line-height: 22px; color: #423F3F;margin: 0 0 13px 0;">
+                                                                                Get an additional 10% back in Google Store credit on all device purchases with an eligible Google One membership.<sup>*</sup>
+                                                                            </p>
+                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
+                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                    Learn more >
+                                                                                </span>
+                                                                             </a>
+                                                                        </td>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <!-- /End of Column 1 -->
+                                                    <!-- Spacer -->
+                                                    <table role="presentation" width="16" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" align="left">
+                                                        <tr>
+                                                            <td style="padding: 0;">
+                                                                &nbsp;
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <!-- /Spacer -->
+                                                    <!-- Start of Column 2 -->
+                                                    <table role="presentation" width="178.6" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" align="left">
+                                                        <tr>
+                                                            <td class="padding" align="left" valign="top" style=" padding: 0 9px 20px 9px;">
+                                                                <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                                                    <tr>
+                                                                        <td align="left" style="padding-top: 20px; padding-bottom: 20px; font-size: 0; width: 100%;">
+                                                                            <img src="img/Financing.png" alt="Goole One" style="width: 40px; height: 40px; display: block;">
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td style="padding: 0;">
+                                                                            <h4 style="font-size: 15px; line-height: 24px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0;">
+                                                                                Financing
+                                                                            </h4>
+                                                                            <p class="sub-head" style="font-size: 12px; line-height: 22px; color: #423F3F;margin: 0 0 13px 0;">
+                                                                                Make shopping simple. Get special financing on qualifying purchases.
+                                                                            </p>
+                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
+                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                    Learn more >
+                                                                                </span>
+                                                                             </a>
+                                                                        </td>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <!-- /End of Column 2 -->
+                                                     <!-- Spacer -->
+                                                     <table role="presentation" width="16" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" align="left">
+                                                        <tr>
+                                                            <td style="padding: 0;">
+                                                                &nbsp;
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <!-- /Spacer -->
+                                                    <!-- Start of Column 3 -->
+                                                    <table role="presentation" width="178.6" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" align="left">
+                                                        <tr>
+                                                            <td class="padding" align="left" valign="top" style=" padding: 0 9px 20px 9px;">
+                                                                <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                                                    <tr>
+                                                                        <td align="left" style="padding-top: 20px; padding-bottom: 20px; font-size: 0; width: 100%;">
+                                                                            <img src="img/Free-Shipping.png" alt="Goole One" style="width: 40px; height: 40px; display: block;">
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td style="padding: 0;" valign="top">
+                                                                            <h4 style="font-size: 15px; line-height: 24px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0;">
+                                                                                Free shipping
+                                                                            </h4>
+                                                                            <p class="sub-head" style="font-size: 12px; line-height: 22px; color: #423F3F;margin: 0 0 13px 0;">
+                                                                                Get free shipping on qualifying purchases.<sup>‡ </sup>
+                                                                            </p>
+                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
+                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                    Learn more >
+                                                                                </span>
+                                                                             </a>
+                                                                        </td>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <!-- /End of Column 3 -->
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
                                 </tr>
-                                <!-- /Options Row -->
+                                <!-- /End of Options Row -->
                             </table>
                         </td>
                     </tr>
