Update footer section

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
                     <!-- ==========>> Start of Footer Section <<==========  -->
                     <tr>
-                        <td align="center" style="padding: 26px 12px 0 12px;" valign="top">
+                        <td align="center" style="padding: 26px 13px 0 13px;" valign="top">
                             <table class="footer" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;">
                                 <!-- Recycle Info Row -->
                                 <tr>
@@ -584,7 +584,7 @@
                                 <!-- Helpful? Row -->
                                 <tr>
                                     <td align="center" style="padding: 0 0 20px 0;">
-                                        <p style="font-size: 13px; line-height: 22px; font-weight: 600; vertical-align: middle; padding: 0; margin: 0; font-weight: 700; color: #423f3f;">Was this email helpful?</p>
+                                        <p style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 700; color: #423f3f;">Was this email helpful?</p>
                                     </td>
                                 </tr>
                                  <!-- /Helpful? Row -->
@@ -607,28 +607,70 @@
 
                                    <!-- Love to Hear From You Row -->
                                 <tr>
-                                    <td align="center" style="padding: 0 0 20px 0;">
-                                        <p style="font-size: 13px; line-height: 22px; font-weight: 600; vertical-align: middle; padding: 0; margin: 0; font-weight: 700; color: #423f3f;">We'd love to hear from you!</p>
+                                    <td align="center" style="padding: 0 0 35px 0;">
+                                        <p style="font-size: 13px; line-height: 22px; font-weight: 700; vertical-align: middle; padding: 0; margin: 0; color: #423f3f;">We'd love to hear from you!</p>
                                         <p style="font-size: 13px; line-height: 22px; font-weight: 400; vertical-align: middle; padding: 0; margin: 0;">Help us improve by sharing your feedback in this short <a href="#" style="color: #1967D2; font-weight: 500;"><span>survey</span></a></p>
                                     </td>
                                 </tr>
                                  <!-- /Love to Hear From You Row -->
+
+                                  <!-- Divider -->
+                                <tr>
+                                    <td align="center" style=" padding: 0 0 35px 0;">
+                                        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                            <tr>
+                                                <td align="center" padding="0" style="border-top: 1px solid #80868B; font-size: 0;
+                                                line-height: 0;">
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <!-- /Divider -->
+
+                                <!-- Policy Section -->
+                                <tr>
+                                    <td align="center" style=" padding: 0;">
+                                        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                            <tr>
+                                                <td align="center" style="padding: 0;">
+                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                        <sup style="font-size: 70%; vertical-align: top;">1</sup> Call quality depends on signal strength, environment, network traffic, and many other factors. Actual results may vary.
+                                                    </p>
+                                                    <br>
+                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                         <sup style="font-size: 70%; vertical-align: top;">2</sup> Requires a Google Assistant-enabled Android 6.0 or newer device, Google Account, and an internet connection. Data rates may apply. For available languages and minimum requirements go to <a href="#" style="color: #1967D2; font-weight: 500;"><span>g.co/pixelbuds/help.com</span></a>.
+                                                    </p>
+                                                    <br>
+                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                        <sup style="font-size: 70%; vertical-align: top;">*</sup>For eligible Google One plans in limited countries. <a href="#" style="color: #1967D2; font-weight: 500;"><span>Restrictions apply.</span></a>
+                                                   </p>
+                                                   <br>
+                                                   <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                    <sup style="font-size: 70%; vertical-align: top;">**</sup>Nest and Pixel products are designed with between 9% and 68% recycled content across their respective plastic parts in 2020 and 2021. This does not include plastics in printed circuit boards, labels, cables, connectors, electronic components and modules, optical components, electrostatic discharge (ESD) components, electromagnetic interference (EMI) components, films, coatings and adhesives.
+                                                    </p>
+                                                    <br>
+                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                        The aluminum in the enclosure of Pixel 5 is 100% recycled content. (Back housing only. Recycled aluminum is approximately 58% of the Pixel 5 enclosure based on weight.) The aluminum in the housing of Pixel 6 is 100% recycled content. (Recycled aluminum (in the housing and other recycled aluminum components) is approximately 14% of product based on weight.)
+                                                    </p>
+                                                    <br>
+                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                        <sup style="font-size: 70%; vertical-align: top;">‡</sup>Free delivery (at the lowest cost option) may be discontinued or changed at any time.
+                                                    </p>
+                                                    <br>
+                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 700; color: #423f3f;">
+                                                        © 2022 Google LLC, 1600 Amphitheatre Parkway, Mountain View, <br>
+                                                        CA 94043, United States
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                
+                                <!-- /Policy Section -->
+
                             </table>
-
-                            <!-- Divider -->
-                            <tr>
-                                <td align="center" style=" padding: 0 12px 0 12px;">
-                                    <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
-                                        <tr>
-                                            <td align="center" padding="0" style="border-top: 1px solid #80868B; font-size: 0;
-                                            line-height: 0;">
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-
-                            <!-- /Divider -->
                         </td>
                     </tr>
                     <!-- ==========>> /End of Footer Section <<==========  -->
