--- a/index.html
+++ b/index.html
@@ -634,33 +634,41 @@
                                         <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                             <tr>
                                                 <td align="center" style="padding: 0;">
-                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                    <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
                                                         <sup style="font-size: 70%; vertical-align: top;">1</sup> Call quality depends on signal strength, environment, network traffic, and many other factors. Actual results may vary.
                                                     </p>
                                                     <br>
-                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                    <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
                                                          <sup style="font-size: 70%; vertical-align: top;">2</sup> Requires a Google Assistant-enabled Android 6.0 or newer device, Google Account, and an internet connection. Data rates may apply. For available languages and minimum requirements go to <a href="#" style="color: #1967D2; font-weight: 500;"><span>g.co/pixelbuds/help.com</span></a>.
                                                     </p>
                                                     <br>
-                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                    <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
                                                         <sup style="font-size: 70%; vertical-align: top;">*</sup>For eligible Google One plans in limited countries. <a href="#" style="color: #1967D2; font-weight: 500;"><span>Restrictions apply.</span></a>
                                                    </p>
                                                    <br>
-                                                   <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                   <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
                                                     <sup style="font-size: 70%; vertical-align: top;">**</sup>Nest and Pixel products are designed with between 9% and 68% recycled content across their respective plastic parts in 2020 and 2021. This does not include plastics in printed circuit boards, labels, cables, connectors, electronic components and modules, optical components, electrostatic discharge (ESD) components, electromagnetic interference (EMI) components, films, coatings and adhesives.
                                                     </p>
                                                     <br>
-                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                    <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
                                                         The aluminum in the enclosure of Pixel 5 is 100% recycled content. (Back housing only. Recycled aluminum is approximately 58% of the Pixel 5 enclosure based on weight.) The aluminum in the housing of Pixel 6 is 100% recycled content. (Recycled aluminum (in the housing and other recycled aluminum components) is approximately 14% of product based on weight.)
                                                     </p>
                                                     <br>
-                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
+                                                    <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 400; color: #423f3f;">
                                                         <sup style="font-size: 70%; vertical-align: top;">‡</sup>Free delivery (at the lowest cost option) may be discontinued or changed at any time.
                                                     </p>
                                                     <br>
-                                                    <p  style="font-size: 13px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 700; color: #423f3f;">
-                                                        © 2022 Google LLC, 1600 Amphitheatre Parkway, Mountain View, <br>
+                                                    <p  style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; font-weight: 700; color: #423f3f;">
+                                                        © 2022 Google LLC, 1600 Amphitheatre Parkway, Mountain View,
                                                         CA 94043, United States
+                                                    </p>
+                                                    <br>
+                                                    <p style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; color: #423f3f;">
+                                                        This email was sent to <a href="#" style="text-decoration: none; color: #423f3f;">hello@SmilesDavis.yeah</a> because you asked to receive offers, updates and more about devices from 
+                                                        Google on <a href="#" style="color: #1967D2; text-decoration: underline;">store.google.com</a>. If you’d like to unsubscribe, click <a href="#" style="color: #1967D2; text-decoration: underline;">here</a>. 
+                                                    </p>   
+                                                    <p style="font-size: 12px; line-height: 22px; vertical-align: middle; padding: 0; margin: 0; color: #423f3f; text-transform: capitalize; padding-top: 12px;">
+                                                        <a href="#" style="text-decoration: none; color: #423f3f;">Privacy Policy</a> <span style="padding: 0 12px 0 12px;">|</span> <a href="#" style="text-decoration: none; color: #423f3f;">Terms of Service</a>
                                                     </p>
                                                 </td>
                                             </tr>
