--- a/index.html
+++ b/index.html
@@ -135,28 +135,49 @@
                                 </tr>
                                 <!-- Start of Content First Row -->
                                 <tr>
-                                    <td align="center" style="padding: 0;">
+                                    <td class="" align="center" style="padding: 0;" valign="top">
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
-                                            <tr>
-                                                <!-- Start of Left Column -->
-                                                <td class="left-column" align="left" style="padding: 30px 20px 30px 20px; vertical-align: middle; text-align: center;" width="50%" valign="top">
-                                                    <h3 class="headline h4" style="font-size: 21px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
-                                                        Tune it out or let it in.
-                                                    </h3>
-                                                    <p class="sub-head" style="font-size: 13px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
-                                                        Block outside sounds with Active Noise Cancellation, or stay aware of your surrounding with Transparency mode.
-                                                    </p>
-                                                    <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
-                                                        <span style="font-size: 15px; line-height: 10px; vertical-align: top;">
-                                                            Learn more >
-                                                        </span>
-                                                    </a>
+                                           <tr>
+                                                <td class="two-columns top">
+                                                    <table class="column left" role="presentation" width="50%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="left">
+                                                        <tr>
+                                                            <td class="padding" valign="top">
+                                                                <table class="content" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                    <tr>
+                                                                        <td class="left-column" align="left" style="padding: 30px 20px 30px 20px; text-align: center; vertical-align: middle;" width="50%" valign="top">
+                                                                            <h3 class="headline h4" style="font-size: 21px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
+                                                                                Tune it out or let it in.
+                                                                            </h3>
+                                                                            <p class="sub-head" style="font-size: 13px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
+                                                                                Block outside sounds with Active Noise Cancellation, or stay aware of your surrounding with Transparency mode.
+                                                                            </p>
+                                                                            <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
+                                                                                <span style="font-size: 15px; line-height: 10px; vertical-align: top;">
+                                                                                    Learn more >
+                                                                                </span>
+                                                                            </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+
+                                                    <table class="column right" role="presentation" width="50%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="left">
+                                                        <tr>
+                                                            <td class="padding">
+                                                                <table class="content" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                    <tr>
+                                                                        <td class="right-column" align="right" style="padding: 0;" width="50%" valign="top">
+                                                                            <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
                                                 </td>
-                                                 <!-- Start of Right Column -->
-                                                <td class="right-column" align="right" style="padding: 0; vertical-align: top" width="50%" valign="top">
-                                                    <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
-                                                </td>
-                                            </tr>
+                                           </tr>
                                         </table>
                                     </td>
                                 </tr>
