--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                                 <!-- Start of Content Second Row -->
                                 <tr>
                                     <td align="center" style="padding: 0;">
-                                        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: center">
+                                        <table class="second-row" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: center">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center; width: 276px;" width="276" valign="top">
+                                                <td class="column left" align="left" style="padding: 0; vertical-align: top; text-align: center; width: 276px;" width="276" valign="top">
                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 12px; overflow: hidden; background-color: #f9e8e3;">
                                                         <tr>
                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
@@ -251,7 +251,7 @@
                                                 <!-- /Spacer -->
 
                                                  <!-- Start of Right Column -->
-                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center; width: 276px;" width="276" valign="top">
+                                                 <td class="column right" align="left" style="padding: 0; vertical-align: top; text-align: center; width: 276px;" width="276" valign="top">
                                                     <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
                                                          <tr>
                                                              <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
